@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160703"
-#define public MagickPackageReleaseDate "snapshot-20160703"
+#define public MagickPackageVersionAddendum ".020160709"
+#define public MagickPackageReleaseDate "snapshot-20160709"
