@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2016-07-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/annotate.c (EscapeParenthesis): In private email on
+2016-07-07, Gustavo Grieco notified us of a heap overflow in
+EscapeParenthesis().  I was not able to reproduce the issue but
+changed the implementation with the suspicion that the
+implementation has a bug, and due to noticing arbitary limits and
+inefficiency.</li>
+</ul>
+</blockquote>
 <p>2016-07-03  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
