@@ -1,3 +1,12 @@
+2016-07-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/annotate.c (EscapeParenthesis): In private email on
+	2016-07-07, Gustavo Grieco notified us of a heap overflow in
+	EscapeParenthesis().  I was not able to reproduce the issue but
+	changed the implementation with the suspicion that the
+	implementation has a bug, and due to noticing arbitary limits and
+	inefficiency.
+
 2016-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/render.c (DrawImage): Fix absolute and arbitrary gradient
